--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,35 @@
   <script src="lib/onsenui/js/onsenui.min.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
-  <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
-  <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
+  <link rel="stylesheet" href="css/css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
 
 
 </head>
 <body>
+<div class="content">
+  <h2 class="text-danger ">ETEC</h2>
+  <hr></hr>
+  <div class="container offset-1">
+  <div class="col-md-12 ">  
+    <div class="row  ">
+<div id="enfe" class=" bg-danger col-md-12 rounded position-static">ENFERMAGEM
 
+</div>
+</div>
+ <div class="row ">
+<div id="anal" class="  col-md-12 position-static rounded bg-primary">ANALISE DE SISTEMA</div>
+ </div>
+ <div class="row ">
+<div id="turis" class="  col-md-12 position-static bg-success rounded text-white">TURISMO</div>
+ </div>
+ <div class="row ">
+<div id="edif" class="  col-md-12 position-static bg-warning  rounded">Edificaçoes</div>
+</div>
+    </div>
+    </div>
+  </div>
+</div>
+</div>
 </body>
 </html>
